--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.6.3</version>
+        </dependency>
     </dependencies>
 
     <build>
