--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -61,6 +61,14 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
