--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mds
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=FleetManagerDB2022
 spring.main.lazy-initialization=false
